<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/back_button5"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:background="#A4A4A4"
        android:tint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/author_create_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

    <TextView
        android:id="@+id/author_create_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="monospace"
        android:text="Crear Autor"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/author_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nom d'autor *"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_create_title" />

    <EditText
        android:id="@+id/surname1_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Primer Cognom"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_name_edit_text" />

    <EditText
        android:id="@+id/surname2_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Segon Cognom"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname1_edit_text" />

    <EditText
        android:id="@+id/biography_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Biografia"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surname2_edit_text" />

    <EditText
        android:id="@+id/nationality_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Nacionalitat *"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biography_edit_text" />

    <EditText
        android:id="@+id/year_birth_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Any de Naixement *"
        android:inputType="number"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nationality_edit_text" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3FA9F5"
        android:fontFamily="monospace"
        android:text="Crear Autor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
